package eapli.base.clientusermanagement.domain;

public enum AddressType {
    BILLING,
    SHIPMENT
}
