package eapli.base.productOrder.domain;

import eapli.framework.domain.model.ValueObject;

import javax.persistence.Embeddable;
import java.io.Serializable;

@Embeddable
public class OrderLine implements ValueObject, Serializable {

}
