package eapli.base.productOrder.domain;

import eapli.framework.domain.model.ValueObject;

import java.io.Serializable;

public enum Payment implements ValueObject, Serializable {
    PAYPAL;
}
